画像のアップロード機能

--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -143,3 +143,11 @@ header {
     transform: translate(-50%, -50%);
     width: 60%;
 }
+
+/* new post */
+
+
+/* profile */
+.profile {
+    display: flex;
+}
