--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -1,10 +1,15 @@
 @charset "utf-8";
 
-html {}
+html {
+    height: 100%;
+}
 
-body {}
+body {
+    /* width: vh; */
+    height: 100%;
+}
 
-/* common */
+/* 共通 */
 p {
     padding: 5px;
     font-size: 15px;
@@ -15,7 +20,117 @@ img {
     width: auto;
 }
 
-/* header */
+.btn_img {
+    width: 25px;
+    height: 25px;
+}
+
+/* 共通「投稿」 */
+/* 投稿 */
+/* .post {
+    border-bottom: 1px solid #c0c0c0;
+} */
+
+.login_post {
+    border-bottom: 1px solid #c0c0c0;
+    height: auto;
+}
+
+.user_post {
+    border-bottom: 1px solid #c0c0c0;
+    height: auto;
+}
+
+.post_icon {
+    position: relative;
+    top: 10px;
+    left: 6%;
+    width: 33px;
+}
+
+.post_name {
+    position: relative;
+    left: 10%;
+    bottom: 35px;
+    font-size: 11px;
+    width: 200px;
+}
+
+.post_post {
+    position: relative;
+    left: 10%;
+    bottom: 30px;
+    font-size: 11px;
+    height: auto;
+    width: 800px;
+}
+
+.post_time {
+    position: relative;
+    left: 89%;
+    bottom: 85px;
+    font-size: 8px;
+    width: 110px;
+}
+
+.btn_block {
+    display: flex;
+    position: relative;
+    left: 90%;
+    width: 38px;
+}
+
+
+/* 共通「ボタン」 */
+.btn {
+    padding: 5px 10px;
+    border-radius: 6px;
+    width: 200px;
+    font-size: 12px;
+}
+
+.btn_hover {
+    color: #fff;
+    background-color: #186AC9;
+}
+
+.btn_hover:hover {
+    color: #fff;
+    background: #4b93e7;
+}
+
+.btn_list {
+    position: relative;
+    left: 50%;
+    z-index: 1;
+}
+
+.btn_search {
+    position: relative;
+    left: 30%;
+    top: 20px;
+    padding: 5px 20px;
+}
+
+.btn_unfollow {
+    padding: 5px 10px;
+    border-radius: 6px;
+    font-size: 14px;
+    color: #fff;
+    background-color: #ff4500;
+}
+
+.btn_follow {
+    padding: 5px 10px;
+    border-radius: 6px;
+    font-size: 14px;
+    color: #fff;
+    background-color: #00bfff;
+}
+
+
+
+/* ヘッダー */
 header {
     height: 60PX;
     width: 100%;
@@ -24,20 +139,95 @@ header {
     justify-content: space-between;
 }
 
+#header_block {
+    display: flex;
+}
+
+
 .header_logo {
-    /* background: #ff69b4; */
+    position: absolute;
+    left: 10px;
+    top: 10px;
 }
 
-.header_logo a {
-    margin: auto;
+.icon {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: 95%;
+    top: 10px;
 }
 
-.header_user {
-    /* background: #3cb371; */
-    width: 25%;
+.header_name {
+    color: #fff;
 }
 
-/* main content */
+/* AM　アコーディオンメニュー */
+.accordion_menu {
+    position: absolute;
+    left: 80%;
+    top: 25px;
+    z-index: 2;
+    width: 20%;
+}
+
+.menu {
+    background: #fff;
+    /* 非表示 */
+    display: none;
+}
+
+.menu_item {
+    border: 0.6px solid #808080;
+    padding: 1.3rem;
+}
+
+.menu_item:hover {
+    background-color: #00008b;
+}
+
+
+li {
+    text-align: center;
+    display: block;
+}
+
+.menu_link {
+    color: #696969;
+    text-decoration: none;
+}
+
+.menu_link:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.js_btn {
+    color: #fff;
+    padding-left: 40px;
+}
+
+/* 矢印下向き */
+.js_btn::after {
+    border-right: solid 2px #fff;
+    border-top: solid 2px #fff;
+    content: "";
+    display: block;
+    height: 8px;
+    position: relative;
+    left: 50%;
+    bottom: 13px;
+    transform: rotate(135deg);
+    transition: transform .3s ease-in-out, top .3s ease-in-out;
+    width: 8px;
+}
+
+/* 矢印上向き */
+.js_btn.open::after {
+    transform: rotate(-45deg);
+}
+
+/* サイドコンテンツ */
 #row {
     display: flex;
     flex-flow: row wrap;
@@ -52,51 +242,25 @@ header {
     border-left: 1px solid #727272;
 }
 
-/* menu_ac */
-.nav {
-    display: none;
+.side-font {
+    font-size: 12px;
 }
 
-.nav-open {
-    padding: 15px;
-    color: #fff;
-    font-size: 20px;
-    background: #2073c8;
-    position: relative;
+.count {
+    display: flex;
+    margin: 10px;
 }
 
-.nav-open::before {
-    /* 閉じている時 */
-    content: "∧";
-    position: absolute;
-    right: 20px;
+.side-count {
+    padding-left: 20px;
 }
 
-.nav-open.active::before {
-    /* 開いている時 */
-    content: "∨";
+#confirm {
+    padding-bottom: 30px;
+    border-bottom: solid 0.3px #808080;
 }
 
-li {
-    font-size: 10px;
-}
-
-/* btn */
-.btn {
-    padding: 0.5px 10px;
-}
-
-.btn_hover {
-    color: #fff;
-    background-color: #186AC9;
-}
-
-.btn_hover:hover {
-    color: #fff;
-    background: #4b93e7;
-}
-
-/* modal */
+/* モーダル */
 .content {
     margin: 0 auto;
     padding: 40px;
@@ -127,10 +291,252 @@ li {
     width: 60%;
 }
 
-/* new post */
+textarea {
+    width: 100%;
+    height: 100px;
+    border: 1px solid #cccccc;
+    resize: none;
+}
+
+.edit_img {
+    position: relative;
+    left: 98%;
+    top: 10px;
+}
+
+/* 新規投稿 */
+.login_icon {
+    position: relative;
+    left: 30px;
+    top: 25px
+}
 
 
-/* profile */
+.new_post {
+    padding-top: px;
+}
+
+
+.send_img {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    left: 80%;
+    bottom: 30px;
+}
+
+
+.form-control {
+    width: 70%;
+    position: relative;
+    left: 70px;
+}
+
+textarea[name="newPost"] {
+    height: 90px;
+    border: none;
+    resize: none;
+}
+
+/* input[name="newPost"]::placeholder {
+    position: absolute;
+    bottom: 75%;
+    left: 5px;
+} */
+
+/* form {} */
+
+.new_form {
+    border-bottom: solid #c0c0c0;
+}
+
+/* プロフィール */
 .profile {
     display: flex;
+}
+
+/* プロフィール編集 */
+.edit_form {
+    margin: 0 auto;
+}
+
+.edit_icon {
+    position: relative;
+    top: 35px;
+    left: 20%;
+}
+
+.edit_item {
+    position: relative;
+    top: 10px;
+    left: 27%;
+}
+
+.edit_input {
+    position: relative;
+    left: 45%;
+    bottom: 10px;
+    border: 1px solid #d3d3d3;
+    background-color: #f5f5f5;
+    width: 300px;
+}
+
+.input_edit {
+    background-color: #f5f5f5;
+    border: none;
+    /* width: 200px; */
+}
+
+
+.add_icon {
+    position: relative;
+    left: 45%;
+    bottom: 10px;
+    border: 1px solid #d3d3d3;
+    width: 300px;
+    height: 70px;
+    background-color: #f5f5f5;
+}
+
+.add_file {
+    text-align: center;
+    background-color: #ffffff;
+    width: 150px;
+    position: relative;
+    left: 27%;
+    top: 26px;
+    color: #d3d3d3;
+    padding: 5px 15px;
+}
+
+
+input[type="file"] {
+    display: none;
+}
+
+.edit_btn {
+    position: relative;
+    left: 38%;
+    top: 10px;
+    padding: 5px 50px;
+    border-radius: 6px;
+    font-size: 14px;
+    color: #fff;
+    background-color: #ff4500;
+    border: none;
+    text-align: center;
+}
+
+
+
+/* 検索 */
+.search_form {
+    border-bottom: solid #c0c0c0;
+    padding: 25px;
+}
+
+.keyword {
+    position: relative;
+    left: 20px;
+    width: 220px;
+    height: 30px;
+}
+
+.search_img {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    left: 40px;
+    top: 10px;
+}
+
+.search_icon {
+    position: relative;
+    left: 22%;
+    width: 600px;
+}
+
+.search_name {
+    position: relative;
+    left: 28%;
+    bottom: 35px;
+    width: 200px;
+}
+
+.chart_btn {
+    position: relative;
+    left: 50%;
+    bottom: 60px;
+}
+
+
+/* リスト */
+.list {
+    border-bottom: solid #c0c0c0;
+    padding: 25px;
+}
+
+h3 {
+    position: relative;
+    left: 5%;
+    top: 10px;
+}
+
+.list_icon {
+    position: relative;
+    left: 18%;
+    bottom: 12px;
+}
+
+
+/* 他ユーザープロフィール */
+.profile_form {
+    border-bottom: solid #c0c0c0;
+    padding-top: 25px;
+    height: 100px;
+}
+
+.profile_icon {
+    position: relative;
+    left: 3%;
+}
+
+.profile_list {
+    position: relative;
+    left: 8%;
+    bottom: 35px;
+    width: 100px;
+}
+
+.profile_item {
+    padding-bottom: 30px;
+}
+
+.profile_inside {
+    position: relative;
+    left: 30%;
+    bottom: 134px;
+    width: 600px;
+}
+
+.profile_btn {
+    position: relative;
+    left: 88%;
+    bottom: 170px;
+}
+
+/* エラーメッセージ */
+.alert {
+    border: 1px solid crimson;
+    background-color: #fff8dc;
+    width: 500px;
+    height: auto;
+    position: absolute;
+    left: 20%;
+    z-index: 5;
+}
+
+.error_msg {
+    color: crimson;
+    padding: 5px;
 }
